...

    <string name="app_name">Memory Assistant</string>

    <!--Main-->
    <string name="login">Login</string>
    <string name="learn">Learn</string>
    <string name="practice">Practice</string>
    <string name="recall">Recall</string>
    <string name="preferences">Preferences</string>
    <string name="get_pro">Be A Part</string>
    <string name="apply">Implement</string>
    <string name="my_space">My Space</string>
    <string name="reminders">Reminders</string>
    <string name="title_activity_preferences">Preferences</string> <!--Weird error without this-->
...
    <string name="events">events</string>
    <string name="sz">Select maximum digits in a value</string>
    <string name="clump">How many values to group together</string>
    <string name="sw">Stopwatch</string>
    <string name="tm">Timer</string>
    <string name="clock">Select Timekeeper</string>
    <string name="start">Start</string>
    <string name="time_up">Time\'s Up</string>
    <string name="ed">Please Enter Duration!</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="ers">Enter number of values and size of each value</string>
...
