<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main_linear_layout">

    <ListView
        android:id="@+id/main_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/list_of_tasks_that_can_be_performed_with_the_app"
        android:divider="@color/color_transparent"
        android:dividerHeight="0px" />

    <LinearLayout
        android:id="@+id/add_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

</LinearLayout>







