...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fadingEdgeLength="16dp"
        android:requiresFadingEdge="horizontal">

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
...
